# firehose_pyio

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.html  conduct.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: doc.yml  release.yml  test.yml
_modules/: firehose_pyio.html  index.html
_modules/firehose_pyio/: boto3_client.html  io.html  options.html
_sources/autoapi/: index.rst.txt
_sources/autoapi/firehose_pyio/: index.rst.txt
_sources/autoapi/firehose_pyio/boto3_client/: index.rst.txt
_sources/autoapi/firehose_pyio/io/: index.rst.txt
_sources/autoapi/firehose_pyio/options/: index.rst.txt
autoapi/: index.html
autoapi/firehose_pyio/: index.html
autoapi/firehose_pyio/boto3_client/: index.html
autoapi/firehose_pyio/io/: index.html
autoapi/firehose_pyio/options/: index.html
docs/: Makefile  conf.py  requirements.txt
examples/: create_resources.py  pipeline.py
src/firehose_pyio/: __init__.py  boto3_client.py  firehose_pyio.py  io.py  options.py
tests/: boto3_client_test.py  io_it_test.py  io_test.py  test_boto3_client.py  test_firehose_pyio.py  test_io.py
