[tool.poetry]
name = "firehose_pyio"
version = "0.1.0"
description = "Apache Beam Python I/O connector for Amazon Firehose"
authors = ["Beam PyIO <beam.pyio@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
urllib3 = "< 2"
apache-beam = {extras = ["aws"], version = ">=2.19.0"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.2,<8.0"
pytest-cov = "^5.0.0"
apache-beam = {extras = ["test"], version = ">=2.19.0"}
moto = {extras = ["firehose", "s3", "sts"], version = "^5.0.9"}

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
